2012-10-12  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed an issue where a wrong site root page was calculated

2012-09-26  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed German decompounding to emit more tokens
	* Added a button to reload a site's cores

2012-09-25  Ingo Renner  <ingo.renner@dkd.de>

	* Added Support for Apache Solr 3.6

	* Added Solr /browse request handler
	* Changed solrconfig.xml for Apache Solr 3.6
	* Changed schema.xml for Apache Solr 3.6
	* Changed default operator to OR
	* Added textpath field type in schema.xml
	* Added geohash dynamic field in schema
	* Added currency field type and dynamic field
	* Changed german, english, and arabic schema to use Solr 3.6 filters
	* Removed language field from schema.xml
	* Changed schema version to 2.8
	* Added json update request handler
	* Added analysis request handlers

2012-09-24  Ingo Renner  <ingo.renner@dkd.de>

	* Added Worsapces publishing / swap support, credits Rolf Hofmann

2012-09-20  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed a bug with Mount Page Index Queue initialization resulting in incorrect SQL, credits Florian Megyesi

2012-09-10  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed bug #40649: Used facet stdWrap parse, credits Pierrick Caillon

2012-09-03  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed forward compatibility for TYPO3 6.0, removed usage of t3lib_div::inInRange()
	* Fixed forward compatibility for TYPO3 6.0, removed usage of t3lib_div::intval_positive()

2012-08-31  Ingo Renner  <ingo.renner@dkd.de>

	* Added a feature to remove facetLinkUrlParameters from the reset all facets link - useForFacetResetLinkUrl = 0

2012-08-30  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed bug #40386: PHP 5.4 Compatibility
	* Fixed bug #40382: Typo in Method getPageTitle prevents pagetitle from being indexed in some cases, credits Dominik Steinborn
	* Fixed a bug where the facet option links did not have the correct target page